[package]
name = "exodus-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exodus-common = {path = "../exodus-common"}
exodus-errors = {path = "../exodus-errors"}
exodus-protocols = {path = "../exodus-protocols"}
drm = {path = "../drm"}
gbm = {path = "../gbm"}
libc = "0.2"
