[package]
name = "exodus-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
drm = {path = "../drm"}
gbm = {path = "../gbm"}
libc = "0.2"
exodus-protocols = {path = "../exodus-protocols"}
exodus-errors = {path = "../exodus-errors"}